[package]
name = "staircases"
version = "0.1.0"
authors = ["Sam Szuflita <sam.szuflita@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5.0"
parry2d = "0.2.0"
nalgebra        = "0.25"
bevy_prototype_debug_lines = "0.2.0"